adding some py archives

--- a/filtro.ipynb
+++ b/filtro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
     "    df2 = pd.read_csv(str(data2))\n",
     "    cantidad_a_sacar = int((total_datos * porcentaje) // 100)\n",
     "    cantidad_restante= total_datos-cantidad_a_sacar\n",
-    "    filas_aleatorias_df1 = df1.sample(cantidad_a_sacar)\n",
-    "    filas_aleatorias_df2=df2.sample(cantidad_restante)\n",
+    "    filas_aleatorias_df1 = df1.sample(cantidad_a_sacar,replace=True)\n",
+    "    filas_aleatorias_df2=df2.sample(cantidad_restante,replace=True)\n",
     "    print(filas_aleatorias_df1.count())\n",
     "    print(filas_aleatorias_df2.count())\n",
     "    filas_aleatorias = pd.concat([filas_aleatorias_df1, filas_aleatorias_df2])\n",
@@ -25,23 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name    500\n",
+      "Name    499996\n",
       "dtype: int64\n",
-      "Name    500\n",
+      "Name    500000\n",
       "dtype: int64\n",
-      "ROOTING FOR ROONA\n"
+      "['THE WRECKING CREW' 'I AM EVIDENCE' 'KHRYSTAL' ... 'BEAU BRUMMELL'\n",
+      " 'GENESSE' 'STORMIE']\n"
      ]
     }
    ],
    "source": [
-    "print(sacar_porcentaje_de_datos(\"Popular-Baby-Names-Final.csv\",\"Films-Actualizado.csv\",50,1000))"
+    "print(sacar_porcentaje_de_datos(\"Popular-Baby-Names-Final.csv\",\"Films-Actualizado.csv\",50,1000000))"
    ]
   },
   {
@@ -68,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
