--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -205,13 +205,14 @@
    ],
    "source": [
     "films = films[~films['0'].isin(babies['Name'])]\n",
+    "films = films.replace(';;;;;', '', regex=True)\n",
     "\n",
     "print(films.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
