--- a/filtro.ipynb
+++ b/filtro.ipynb
@@ -692,10 +692,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/t7/pm3lvp3j0_sb36kyc3gfdvmw0000gn/T/ipykernel_93124/46069964.py:3: FutureWarning: save is not part of the public API, usage can give unexpected results and will be removed in a future version\n",
+      "  writer.save()\n"
+     ]
+    }
+   ],
+   "source": [
+    "writer = pd.ExcelWriter('data.xlsx', engine='xlsxwriter')\n",
+    "df.to_excel(writer, sheet_name='Hoja1', index=False)\n",
+    "writer.save()\n"
+   ]
   }
  ],
  "metadata": {
